added colab gdown

--- a/bitterling_lm.ipynb
+++ b/bitterling_lm.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "01bfa959-adfe-4573-bda5-1cb2645daf3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system(\"gdown --id 1IC4zTtj5zBvN2e1oCJ8b_Y3ymOSSbvgc\")\n",
+    "system(\"mkdir Data\")\n",
+    "system(\"mv MNVterr.csv Data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "id": "4adf5b14-b3f5-469c-9db0-4140e4ba50db",
    "metadata": {},
